force-app/main/default/objects/Exl_NotesAndComments__c/Exl_NotesAndComments__c.object-meta.xml
<CustomObject>
    <label>Notes and Comments</label>
    <nameField>
        <displayFormat>NC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes and Comments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>