force-app/main/default/objects/Exl_NotesAndComments__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked Contravention record</description>
    <inlineHelpText>Linked Contravention record</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Notes and Comments</relationshipLabel>
    <relationshipName>Notes_and_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>