force-app/main/default/objects/Exl_NotesAndComments__c/fields/CID_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>CID_Created_Date__c</fullName>
    <description>The date the note is created editable by the user, defaulted to Created date. Used for storing the historical created date for migrated data.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the note is created editable by the user, defaulted to Created date. Used for storing the historical created date for migrated data.</inlineHelpText>
    <label>CID Created Date</label>
    <type>Date</type>
</CustomField>