force-app/main/default/objects/Exl_NotesAndComments__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Content of the note</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Content of the note</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>