force-app/main/default/objects/Exl_NotesAndComments__c/fields/Exclusion__c.field-meta.xml
<CustomField>
    <fullName>Exclusion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked exclusion record</description>
    <inlineHelpText>Linked exclusion record</inlineHelpText>
    <label>Exclusion</label>
    <referenceTo>Exl_Exclusion__c</referenceTo>
    <relationshipLabel>Notes and Comments</relationshipLabel>
    <relationshipName>Notes_and_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>