force-app/main/default/objects/Exl_NotesAndComments__c/fields/Patron__c.field-meta.xml
<CustomField>
    <fullName>Patron__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked patron record</description>
    <inlineHelpText>Linked patron record</inlineHelpText>
    <label>Patron</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notes and Comments</relationshipLabel>
    <relationshipName>Notes_and_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>