force-app/main/default/objects/Exl_NotesAndComments__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Short title to describe the note</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Short title to describe the note</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>