force-app/main/default/objects/Exl_NotesAndComments__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Extension Reason - Used for Revocation flow where selected type is Extend.

Revocation Reason - Used for Migrated Records

Comments and Remarks - Used for Migrated Records and New Records

Written Warning - Not used as phase 1</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comments and Remarks</fullName>
            </value>
            <value>
                <fullName>Extension Reason</fullName>
            </value>
            <value>
                <fullName>Revocation Reason</fullName>
            </value>
            <value>
                <fullName>Written Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>