force-app/main/default/objects/Exl_NotesAndComments__c/recordTypes/Exclusions_Notes_and_Comments.recordType-meta.xml
<RecordType>
    <fullName>Exclusions_Notes_and_Comments</fullName>
    <active>true</active>
    <label>Exclusions Notes and Comments</label>
</RecordType>